--- a/.github/workflows/github-cd.yml
+++ b/.github/workflows/github-cd.yml
@@ -4,7 +4,7 @@ name: Production Deployment Workflow
 
 defaults:
   run:
-    working-directory: my-app
+    working-directory: .
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
