--- a/.github/workflows/github-cd.yml
+++ b/.github/workflows/github-cd.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Get tag name
       id: get_tag_name
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-      working-directory: ../
+      working-directory: .
     - uses: actions/checkout@v1
       with:
         ref: ${{ steps.get_tag_name.outputs.VERSION }}
