--- a/.github/workflows/github-cd.yml
+++ b/.github/workflows/github-cd.yml
@@ -54,6 +54,13 @@ jobs:
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         privateKey: ${{ secrets.SERVER_SSH_KEY }}
+    - name: symlink configs
+      uses: garygrossgarten/github-action-ssh@release
+      with:
+        command: ln -sfn ${{ secrets.REMOTE_TARGET }}/secrets/config.json ${{ secrets.REMOTE_TARGET }}/current/config.json
+        host: ${{ secrets.REMOTE_HOST }}
+        username: ${{ secrets.REMOTE_USER }}
+        privateKey: ${{ secrets.SERVER_SSH_KEY }}
     - name: reload PM2 process
       uses: garygrossgarten/github-action-ssh@release
       with:
